--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,8 @@ name = "RamanujanGraphs"
 uuid = "e7bd6bc6-b6b8-11e9-1ec2-2f89442c0d6c"
 authors = ["kalmarek <kalmar@amu.edu.pl>"]
 version = "0.1.0"
+
+[deps]
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
