--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,20 @@
 name = "RamanujanGraphs"
 uuid = "e7bd6bc6-b6b8-11e9-1ec2-2f89442c0d6c"
-authors = ["kalmarek <kalmar@amu.edu.pl>"]
-version = "0.2.0"
+authors = ["Marek Kaluba <kalmar@amu.edu.pl>"]
+version = "0.2.1"
 
 [deps]
-Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
+
+[compat]
+LightGraphs = "1"
+Primes = "0.4"
+julia = "1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
