--- a/Project.toml
+++ b/Project.toml
@@ -1,15 +1,15 @@
 name = "RamanujanGraphs"
 uuid = "e7bd6bc6-b6b8-11e9-1ec2-2f89442c0d6c"
 authors = ["Marek Kaluba <kalmar@amu.edu.pl>"]
-version = "0.4.0"
+version = "0.4.1"
 
 [deps]
-LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Primes = "27ebfcd6-29c5-5fa9-bf4b-fb8fc14df3ae"
 
 [compat]
-LightGraphs = "1"
+Graphs = "1.7"
 Primes = "0.4"
 julia = "1"
 
